# VeMAC

./: CMakeLists.txt  Protocol_VeMAC.cpp  Protocol_VeMAC.h  UpLocation.cpp  collision.cpp  collision.h  communication.cpp  communication.h  main.cpp  packet.cpp  packet.h  parameters.cpp  parameters.h  vehicle.cpp  vehicle.h
